--- a/express-server/package.json
+++ b/express-server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
     "socket.io": "^4.8.1"
