--- a/express-server/package.json
+++ b/express-server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "crypto": "^1.0.1",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
     "socket.io": "^4.8.1"
