--- a/secure-chat/package.json
+++ b/secure-chat/package.json
@@ -8,11 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "argon2": "^0.41.1",
     "argon2-browser": "^1.18.0",
+    "buffer": "^6.0.3",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.0.2",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.8.1",
+    "stream-browserify": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
