--- a/secure-chat/package.json
+++ b/secure-chat/package.json
@@ -11,6 +11,7 @@
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.1",
+    "node-forge": "^1.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.0.2",
